tests/test_enum/bad/too_many_cases.catala
## [Article]

```catala
new enum E:
  -- Case1 content int
  -- Case2 content bool
  -- Case3

new enum F:
  -- Case4

new scope A:
  param e content E
  param out content bool

scope A:
  def out := match e with
    -- Case1 of i : i = 0
    -- Case2 of b : b
    -- Case3 : false
    -- Case4 : true
```
